add contact us section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,7 +140,8 @@ a:active{
 /* BUTTONS */
 /*-----------------------------------*/
 
-.btn:link, .btn:visited {
+.btn:link, .btn:visited,
+input[type=submit]{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -151,7 +152,8 @@ a:active{
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit]{
     background-color: #e67e22;
     border: 1px solid #e67e22;
      color: #fff;
@@ -164,11 +166,14 @@ a:active{
     color: #e67e22;
 }
 
-.btn:hover, .btn:active {
+.btn:hover, .btn:active,
+input[type=submit]:hover,
+input[type=submit]:active{
     background-color: #cf6d17;
 }
 
-.btn-full:hover, .btn-full:active {
+.btn-full:hover, 
+.btn-full:active{
      border: 1px solid #cf6d17;
 }
 
@@ -446,4 +451,35 @@ cite img{
 .plan-box div:last-child {
     text-align: center;
     border: 0;
+}
+
+/*-----------------------------------*/
+/* CONTACT FORM */
+/*-----------------------------------*/
+
+.contact-form{
+    width: 60%;
+    margin: 0px auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox]{
+    margin: 10px 5px 10px 0px;
+}
+
+*:focus{
+    outline: none;
 }
