--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -92,6 +92,7 @@ a:visited{
     text-decoration: none;
     border-bottom: 1px solid #e67e22;
     padding-bottom: 1px;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -148,6 +149,7 @@ input[type=submit]{
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
    
 }
@@ -187,6 +189,7 @@ input[type=submit]:active{
 /*-----------------------------------*/
 
 header {
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -199,6 +202,7 @@ header {
     width: 1140px;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
    
 }
@@ -228,6 +232,7 @@ header {
     text-transform: uppercase;
     font-size: 90%;
     border-bottom: transparent;
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
     padding: 8px 0px;
 }
@@ -274,11 +279,16 @@ header {
     opacity: 0.7;
     width: 100%;
     height:auto;
+    -webkit-transform: scale(1.15);
     transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover{
+    -webkit-transform: scale(1.03);
     transform: scale(1.03);
     opacity: 1.0;
 }
@@ -365,6 +375,7 @@ header {
 /*-----------------------------------*/
 
 .section-testimonials{
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)) ,url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)) ,url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
@@ -523,6 +534,7 @@ footer {
     text-decoration: none;
     border: 0;
     color: #888;
+    -webkit-transform: color 0.2s;
     transform: color 0.2s;
 }
 
@@ -547,6 +559,7 @@ footer {
 .ion-social-twitter,
 .ion-social-googleplus,
 .ion-social-instagram{
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 .ion-social-facebook:hover{
