add jquery, waypoints and make sticky navigation bar

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -214,6 +214,14 @@ header {
     margin-top: 20px;
 }
 
+.logo-black{
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0px;
+    display: none;
+}
+/*---Navigation----*/
 .main-nav{
     float:right;
     list-style: none;
@@ -242,6 +250,33 @@ header {
    border-bottom: 1px solid #e67e22;
 }
 
+/*---Sticky navi-----*/
+.sticky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255,255,255,0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
+}
+
+.sticky .main-nav{
+    margin-top: 18px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    color: #555;
+    padding: 16px 0px;
+}
+
+.sticky .logo{
+    display: none;
+}
+.sticky .logo-black{
+    display: block; 
+}
 
 /*-----------------------------------*/
 /* FEATURES */
