--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -619,4 +619,22 @@ footer p{
 }
 
 
+/*-----------------------------------*/
+/* ANIMATION */
+/*-----------------------------------*/
 
+.js--wp-1, .js--wp-2, .js--wp-3 {
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js-wp-4{
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated{
+    opacity: 1;
+}
