add mobile menu

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -250,6 +250,18 @@ header {
    border-bottom: 1px solid #e67e22;
 }
 
+/* Mobile navi */
+.mobile-nav-icon{
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i{
+    font-size: 200%;
+    color: #fff;
+}
 /*---Sticky navi-----*/
 .sticky{
     position: fixed;
