--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -93,6 +93,45 @@
     .main-nav{
         display: none;
     }
+  
+    .mobile-nav-icon{
+        display: inline-block;
+    }
+    .main-nav {
+        float: left;
+        margin-top: 35px;
+        margin-left: 25px;
+    }
+    
+    .main-nav li {
+        display: block;
+    }
+    
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0px;
+        font-size: 100%;
+    }
+    
+    
+    .sticky .main-nav{
+        margin-top: 10px;
+    }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited {
+        padding: 10px 0px;
+    }
+    
+    .sticky .mobile-nav-icon i{
+        color: #555;
+    }
+    .sticky .mobile-nav-icon{
+       margin-top: 10px;
+    }
+  
     
     h1{
         font-size: 180%;
