--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -543,6 +543,10 @@ input[type=checkbox]{
     outline: none;
 }
 
+.map {
+    width: 100%;
+    height: 500px;
+}
 /*-----------------------------------*/
 /* FOOTER */
 /*-----------------------------------*/
