--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -67,7 +67,7 @@
     }
     
     .contact-form{
-        width: 80%;
+        width: 90%;
     }
 }
 
@@ -164,6 +164,24 @@
     
      .app-screen{
         width: 40%;
+    }
+    
+    .map-box {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .map {
+        width: 100%;
+        height: 300px;
+        position: relative;
+    }
+
+    .form-box {
+        position: relative;
+        height: auto;
+        padding: 30px 0;
+        width: 100%;
     }
     
 }
