--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -517,7 +517,7 @@ cite img{
 /*-----------------------------------*/
 
 .contact-form{
-    width: 60%;
+    width: 90%;
     margin: 0px auto;
 }
 
@@ -543,9 +543,26 @@ input[type=checkbox]{
     outline: none;
 }
 
+.map-box {
+    width: 100%;
+    height: 560px;
+    position: relative;
+}
 .map {
     width: 100%;
-    height: 500px;
+    height: 560px;
+    position: relative;
+}
+
+.form-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(255,255,255,0.8);
+    z-index: 10;
+    height: 560px;
+    padding-top: 40px;
+    width: 50%;
 }
 /*-----------------------------------*/
 /* FOOTER */
